pages/insurance files add. small change in footer/nav

--- a/pages/faq/faq.ejs
+++ b/pages/faq/faq.ejs
@@ -13,7 +13,7 @@
     <%- include('../../views/nav'); %>
 
     <section id="dictionary">
-      <h1>FAQ</h1>
+      <h1>Najczęściej zadawane pytania</h1>
       <div class="partner-container">
         <div class="partner-box container">
           <div class="partner-left">
