--- a/pages/index.ejs
+++ b/pages/index.ejs
@@ -21,7 +21,7 @@
 
       <div class="choose-description container">
         <div class="left-site">
-          <img src="/resources/1.avif" alt="Choose-us" height="290px" width="350px" />
+          <img src="/resources/1.avif" alt="Choose-us" height="293px" width="350px" />
         </div>
         <div class="right-site">
           <h2>Najlepsze ubezpieczenia w Chorzowie</h2>
@@ -46,7 +46,7 @@
           <div class="splide__track">
             <ul class="splide__list">
               <li class="splide__slide">
-                <div class="offer-box">
+                <div class="offer-box container">
                   <div class="row">
                     <div class="left-row">
                       <div><i class="fa-solid fa-car-burst fa-2xl"></i></div>
@@ -60,7 +60,7 @@
                         </p>
                       </div>
                       <div>
-                        <a href="#"
+                        <a href="/ubezpieczenie-oc-ac"
                           ><button class="button">Sprawdź więcej</button></a
                         >
                       </div>
@@ -74,7 +74,7 @@
                 </div>
               </li>
               <li class="splide__slide">
-                <div class="offer-box">
+                <div class="offer-box container">
                   <div class="row">
                     <div class="left-row">
                       <div><i class="fa-solid fa-heart fa-2xl"></i></div>
@@ -88,7 +88,7 @@
                           Twojej rodziny.
                         </p>
                       </div>
-                      <div><button class="button">Sprawdź więcej</button></div>
+                      <div><a href="/ubezpieczenie-na-zycie"><button class="button">Sprawdź więcej</button></a></div>
                     </div>
                     <div class="right-row">
                       <div>
@@ -99,7 +99,7 @@
                 </div>
               </li>
               <li class="splide__slide">
-                <div class="offer-box">
+                <div class="offer-box container">
                   <div class="row">
                     <div class="left-row">
                       <div>
@@ -116,7 +116,7 @@
                           edukacyjnych.
                         </p>
                       </div>
-                      <div><button class="button">Sprawdź więcej</button></div>
+                      <div><a href="/ubezpieczenie-szkolne"><button class="button">Sprawdź więcej</button></a></div>
                     </div>
                     <div class="right-row">
                       <div>
@@ -130,7 +130,7 @@
                 </div>
               </li>
               <li class="splide__slide">
-                <div class="offer-box">
+                <div class="offer-box container">
                   <div class="row">
                     <div class="left-row">
                       <div><i class="fa-solid fa-plane fa-2xl"></i></div>
@@ -144,7 +144,7 @@
                           ochronę na każdym etapie podróży.
                         </p>
                       </div>
-                      <div><button class="button">Sprawdź więcej</button></div>
+                      <div><a href="/ubezpieczenie-podrozne"><button class="button">Sprawdź więcej</button></a></div>
                     </div>
                     <div class="right-row">
                       <div>
@@ -158,7 +158,7 @@
                 </div>
               </li>
               <li class="splide__slide">
-                <div class="offer-box">
+                <div class="offer-box container">
                   <div class="row">
                     <div class="left-row">
                       <div>
@@ -175,7 +175,7 @@
                           jesteś odpowiednio zabezpieczony.
                         </p>
                       </div>
-                      <div><button class="button">Sprawdź więcej</button></div>
+                      <div><a href="/ubezpieczenie-mieszkan"><button class="button">Sprawdź więcej</button></a></div>
                     </div>
                     <div class="right-row">
                       <div>
@@ -189,7 +189,7 @@
                 </div>
               </li>
               <li class="splide__slide">
-                <div class="offer-box">
+                <div class="offer-box container">
                   <div class="row">
                     <div class="left-row">
                       <div>
@@ -206,7 +206,7 @@
                           Twoje interesy.
                         </p>
                       </div>
-                      <div><button class="button">Sprawdź więcej</button></div>
+                      <div><a href="/ubezpieczenie-firmowe"><button class="button">Sprawdź więcej</button></a></div>
                     </div>
                     <div class="right-row">
                       <div>
